--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,173 @@
-		body {	background-color: #bbe1fa;  }
-    h1 { color: #0f4c75;	}
-    h3 { color: #3282b8;	}
-		hr {  border-style: none;
-					border-top-style: dotted;
-					border-color: white;
-					border-width: 8px;
-					width: 10%;}
+/* Site Colors */
+/*   e4f1fe   -   powder blue
+     8dc6ff   -   baby blue
+		 22313f   -   navy blue
+		 34495e   -   grayish blue
+		 f0ece2   -   light cream
+		 e8e8e8   -   light gray
+		 5588a3   -   mid blue
+		 145374   -   dark blue
+		 00334e   -   real dark blue
+*/
+
+h1 {
+	margin-top: 50px;
+			font-family: 'Sacramento', Script;
+			font-size: 5.2rem;
+			margin: 50px auto 0 auto;
+		}
+
+.dp {
+	text-decoration: underline;
+	color: #2f89fc;
+	}
+.top-cloud {
+	position: relative;
+	left: 400px;
+	margin: 0 auto 0 auto;
+}
+.bottom-cloud {
+  position: relative;
+	right: 400px;
+}
+.subtitle {
+				font-family: 'Montserrat', sans-serif;
+				font-size: 2rem;
+				font-weight: normal;
+}
+h2 {
+			font-family: 'Montserrat', sans-serif;
+			font-size: 2.5rem;
+
+}
+h3 {
+			font-family: 'Montserrat', sans-serif;
+}
+body {
+		margin: 0;
+		text-align: center;
+		font-family: 'Merriweather Sans', sans-serif;
+		color: #00334e;
+		}
+		p {
+				line-height: 2;
+		}
+
+.chris-pic {
+	border-radius: 100px;
+}
+.skill-row {
+	width: 50%;
+	margin: 100px auto 100px auto;
+	text-align: left;
+}
+.skill-pic {
+	width: 200px;
+	border-radius: 100px;
+	float: left;
+	margin-right: 30px;
+
+}
+.skill-pic2 {
+	width: 200px;
+	border-radius: 100px;
+	float: right;
+	margin-left: 30px;
+}
+.top-container {
+	Background-color: #8dc6ff;
+	color: #10316b;
+	position: relative;
+	padding-top: 150px;
+}
+.middle-container {
+	padding-top: 100px;
+}
+.bottom-container {
+	line-height: 2;
+	background-color: #8dc6ff;
+	padding: 50px 0 20px;
+}
+
+.contact-me {
+	line-height: 2;
+}
+
+hr {
+	border-style: dotted;
+	border-bottom: 0;
+	border-left: 0;
+	border-right: 0;
+	width: 4%;
+	border-top-width: .5rem ;
+	border-color: #8dc6ff;
+	margin: 100px auto 100px auto;
+}
+.profile {
+	margin-bottom: 80px;
+}
+.skills {
+	margin-top: 80px;
+}
+.button-space {
+	margin: 60px auto 60px auto;
+}
+.button {
+	text-decoration: none;
+	letter-spacing: 0.66px;
+	font-size: 30px;
+	color: #FFFFFF;
+	font-family: "Montserrat Alternates", sans-serif;
+	background: linear-gradient(to bottom, #5A86FF, #0F1A3D);
+	border: solid #3677FB 1.6px;
+	border-radius: 50px;
+	padding:21.3px;
+	text-shadow: 0 3px 2px #000000;
+	box-shadow: 2px 2px 5px #0D2444;
+	-webkit-transition: all 0.15s ease;
+	-moz-transition: all 0.15s ease;
+	-o-transition: all 0.15s ease;
+	transition: all 0.15s ease;
+
+}
+
+.button:hover {
+	opacity: 0.9;
+	background: linear-gradient(to bottom, #0F1A3D, #5A86FF);
+	border: 2px solid #B6BC2F;
+	text-shadow: 0 1px 2px #000000;
+	box-shadow: 0 1px 2px #000000;
+}
+.footer-link {
+	text-decoration: none;
+	letter-spacing: 0.66px;
+	font-size: 20px;
+	color: #FFFFFF;
+	font-family: "Montserrat Alternates", sans-serif;
+	background: linear-gradient(to bottom, #5A86FF, #0F1A3D);
+	border: solid #3677FB 1.6px;
+	border-radius: 50px;
+	padding:14px;
+	text-shadow: 0 3px 2px #000000;
+	box-shadow: 2px 2px 5px #0D2444;
+	-webkit-transition: all 0.15s ease;
+	-moz-transition: all 0.15s ease;
+	-o-transition: all 0.15s ease;
+	transition: all 0.15s ease;
+
+}
+
+.footer-link:hover {
+	opacity: 0.9;
+	background: linear-gradient(to bottom, #0F1A3D, #5A86FF);
+	border: 2px solid #B6BC2F;
+	text-shadow: 0 1px 2px #000000;
+	box-shadow: 0 1px 2px #000000;
+}
+
+.copyright {
+	font-size: 12px;
+	font-family: "Montserrat Alternates", sans-serif;
+	color: #5588a3;
+	padding: 20px 0;
+}
